--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/vue-fontawesome": "^3.0.8",
+    "@googlemaps/js-api-loader": "^1.16.6",
     "bootstrap-icons": "^1.11.3",
     "vue": "^3.4.26",
     "vue-router": "^4.3.2"
